[package]
name = "hunter"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "a simple ecs implementation"
repository = "https://github.com/jjmartinodev/grasp"
keywords = ["math"]
categories = ["math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3