[package]
name = "opimus"
version = "0.1.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "a simple matrix multiplicator"
repository = "https://github.com/jjmartinodev/opimus"
keywords = ["math"]
categories = ["math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3